[package]
name = "rattish"
version = "0.5.0"
authors = ["Alan Egerton <eggyal@gmail.com>"]
edition = "2018"
description = "Cast between trait objects."
repository = "https://github.com/eggyal/rattish"
license = "Apache-2.0"
keywords = ["runtime", "type", "reflection", "rtti", "dynamic"]
categories = ["data-structures", "memory-management", "no-std", "rust-patterns"]

[features]
alloc = []
std = ["alloc", "thiserror"]
global = ["std"]

[dependencies]
thiserror = { version = "1.0.29", optional = true }
